syntax = "proto3";

package model_service;
option java_multiple_files = false;
option java_package = "com.block";
option java_outer_classname = "ModelProto";


message ModelState{
  bytes model = 1;
}

message Msg{
  string data = 1;
}

message Accuracy{
  double acc = 1;
}

message initData{
  double accThreshold = 1;
  int32 modelNumThreshold = 2;
}

message ModelInfo{
  bytes model = 1;
  string address = 2;
}

service ModelService{
  rpc latestModel(ModelInfo) returns(Msg){};
  rpc testModel(ModelState) returns(Accuracy){};
  rpc notice(Msg) returns(Msg){};
  rpc globalModel(ModelState) returns(Msg){};
  rpc init(initData) returns(Msg){};
}